# stm32h7-rs

./: .gdbinit  .travis.yml  Cargo.toml  Makefile  README.md  Xargo.toml  build.rs  debug.gdb  device.x  link.ld  memory.x  stm32h7.json  stm32h7.ld
.cargo/: config
src/: error.rs  gpio.rs  lib.rs  main.rs
utils/: debug.gdb  stm32h7x3i.cfg
