[package]
authors = ["Sascha Grunert <mail@saschagrunert.de>"]
categories = ["embedded", "no-std"]
description = "A template for building applications for ARM Cortex-M7 STM32H7xx Microcontrollers"
keywords = ["arm", "cortex-m", "m7", "template"]
license = "MIT"
name = "stm32h7xx"
repository = "https://github.com/saschagrunert/stm32h7-rs"
version = "0.1.0"

[[bin]]
doc = false
name = "app"
path = "src/main.rs"

[dependencies]
bare-metal = "0.2.0"
cortex-m = "0.5.2"
cortex-m-rt = "0.5.1"
cortex-m-semihosting = "0.3.0"
panic-semihosting = "0.3.0"
vcell = "0.1.0"

[profile.dev]
codegen-units = 1
incremental = false

[profile.release]
debug = true
lto = true
