[package]
authors = ["Sascha Grunert <mail@saschagrunert.de>"]
categories = ["embedded", "no-std"]
description = "A template for building applications for ARM Cortex-M7 STM32H7xx Microcontrollers"
keywords = ["arm", "cortex-m", "m7", "template"]
license = "MIT"
name = "stm32h7xx"
repository = "https://github.com/saschagrunert/stm32h7-rs"
version = "0.2.0"

[[bin]]
doc = false
name = "app"
path = "src/main.rs"

[dependencies]
alloc-cortex-m = "0.3.5"
cast = { version = "0.2.2", default-features = false }
cortex-m = "0.5.8"
cortex-m-rt = "0.5.1"
cortex-m-semihosting = "0.3.0"
panic-semihosting = "0.4.0"
stm32h7 = { version = "0.8.0", features = ["stm32h743", "rt"] }
embedded-hal = { version = "0.2.1", features = ["unproven"] }

[profile.dev]
codegen-units = 1
incremental = false

[profile.release]
codegen-units = 1
debug = true
lto = true
